# sweg

C++/templates/: map_example.cc
C++/uninitialized_variables/: README  main.c  main.cc
C/math/: main.c
bash/: bash_test_for_success.sh  tests.sh
bash/args/: README.md  bottom.sh  top.sh
bash/exit_status_testing/: status_test.sh
bash/getopts/: options.sh
bash/ltest/: README.md
bash/misc/: README  README.md  two_way_direction.sh
catch2/: factorial.cc
catch2/catch_test/: catch_test.cc  const_func.cc  const_func.h
ccdb/: ccdb_test
ccdb/C++/: Makefile  Makefile.~1~  example  example.cc  example.cc.~1~  setup.sh
cmake/custom/: README.md
cmake/main/: CMakeLists.txt  README.md
cmake/wiki_example/: run_cmake_example.sh
condor/getting_started/: sleep.sh  sleep.sub
condor/test/: .gitignore  test.sh  test.sub
docker/: Dockerfile  README.md
gluex/etasim/: README.md  control.in  r.mac
gprof/: .gitignore  Makefile  hog.f
grep/: file.txt  grep.sh  grep.sh.~1~
latex/: layout.tex
patch/: .gitignore  README.md  create_and_apply_patches.sh  with_edit_1.txt  with_edit_2.txt  with_edit_3.txt
perl/: create_hash_pass_it_to_subroutine.pl
root/: .cvsignore  .gitignore  Makefile  create_hist  create_hist.C  create_hist.cxx  creating_viewing_geometries.C  data.txt  draw_hist.C  extract_parameters.C  geom_shapes_3d_viewer.C  geometry.C  geometry_with_volumes.C  hist.root  hits.txt  hsimple.C  job_plot.C  job_plot_2.C  poly.C  poly_view.C  readfile.C  track.C  track.txt
scons_1/: .gitignore  README.md  SConstruct
vorbis/: c.txt  example.sh
(+59 files in other folders)
